data/test/type_check/fail/array_4.v
// Too many subscripts
wire x[3:0];
assign x[0][0][0] = 1;
